# status-area-applet-battery

./: Makefile  Makefile.am  README  batmon.c  batmon.h  configure.ac  status-area-applet-battery.c  status-area-applet-battery.schemas  status-area-applet-battery.schemas.in  upower-defs.h
debian/: changelog  control  copyright  postinst  prerm  rules
src/: Makefile  status-area-applet-battery.c  status-area-applet-battery.desktop  status-area-applet-battery.h
